sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:7: error: ')' expected but ',' found.
    for(i <- getNombreValeurs()-2 to 0,-1){
                                      ^AlgBubbleSort2:15: error: illegal start of simple expression
  }
  ^